<resources>
    <string name="app_name">AppMotoTaxi1601</string>
    <string name="txt_titulo">Profissionais do Amarelinho</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string  name="txt_hint_edit_sobrenome">Sobre Nome</string>
    <string name="txt_hint_edit_profissional_desejado">Qual profissional?</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato</string>
     <string name="txt_btn_limpar">LIMPAR</string>
    <string name="txt_btn_salvar">SALVAR</string>
    <string name="txt_btn_finalizar">FINALIZAR</string>
    <string name="txt_selecione_um_profissional">Selecione um Profissional...</string>
    <string name="selecione_um_profissional">Selecione um Profissional</string>
</resources>