<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTituloApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@color/amarelo"
                android:gravity="center"
                android:text="@string/txt_titulo"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPrimeiroNome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_hint_edit_primeiro_nome"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/editSobreNome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_hint_edit_sobrenome"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/editQualProfissional"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_hint_edit_profissional_desejado"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/editTelefoneDeContato"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_hint_edit_telefone_de_contato"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:text="@string/txt_selecione_um_profissional"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:background="@color/amarelo"
                android:minHeight="60dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="377dp"
                android:layout_margin="16dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/black"
                    android:text="@string/txt_btn_limpar"
                    android:textColor="#F44336" />

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/black"
                    android:text="@string/txt_btn_salvar"
                    android:textColor="#F44336" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/teal_700"
                android:text="@string/txt_btn_finalizar"
                android:textColor="#000000" />

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>